--- a/QR_Gen.html
+++ b/QR_Gen.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +44,11 @@
             background-color: #ddd;
         }
 
-        #link, #text, #location, #gmail, #size-input {
+        #link,
+        #text,
+        #location,
+        #gmail,
+        #size-input {
             display: none;
             margin-top: 20px;
         }
@@ -77,11 +82,12 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>QR Code Generator</h1>
     </header>
-    
+
     <div class="tabs">
         <div class="tab" onclick="showSection('link')">Link</div>
         <div class="tab" onclick="showSection('text')">Text</div>
@@ -114,49 +120,45 @@
         <input type="number" id="size" placeholder="Enter size" min="1" value="128">
     </div>
 
-    <label for="color">Color :</label>
+    <label for="color">Color:</label>
     <input type="color" id="color" value="#000000">
 
-    <button onclick="generateQRCode()">Generate QR Code</button>
+    <button onclick="generateQRCode()" id="generateButton">Generate QR Code</button>
 
     <div id="qr-code"></div>
 
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <script src="https://cdn.rawgit.com/jnordberg/gif.js/0.2.0/dist/gif.js"></script>
     <script>
-        function showSection(section) {
-            const sections = ['link', 'text', 'location', 'gmail', 'size-input'];
-            sections.forEach(s => {
-                const element = document.getElementById(s);
-                if (s === section) {
-                    element.style.display = 'block';
-                } else {
-                    element.style.display = 'none';
-                }
-            });
-        }
+        let isGenerated = false; // Flag to track whether QR code is generated or not
 
         function generateQRCode() {
-            const link = document.getElementById('link-input').value;
-            const text = document.getElementById('text-input').value;
-            const location = document.getElementById('location-input').value;
-            const gmail = document.getElementById('gmail-input').value;
-            const size = document.getElementById('size').value;
-            const color = document.getElementById('color').value;
+            if (isGenerated) {
+                // If QR code is already generated, refresh the page
+                location.reload();
+            } else {
+                const link = document.getElementById('link-input').value;
+                const text = document.getElementById('text-input').value;
+                const location = document.getElementById('location-input').value;
+                const gmail = document.getElementById('gmail-input').value;
+                const color = document.getElementById('color').value;
 
-            const data = `${link}\n${text}\n${location}\n${gmail}`;
+                const data = `${link}\n${text}\n${location}\n${gmail}`;
 
-            const qrCode = new QRCode(document.getElementById("qr-code"), {
-                text: data,
-                width: size,
-                height: size,
-                colorDark: color,
-            });
+                const qrCode = new QRCode(document.getElementById("qr-code"), {
+                    text: data,
+                    colorDark: color,
+                });
 
-            // Add download buttons
-            addDownloadButton('png', 'Download PNG', qrCode, 'image/png');
-            addDownloadButton('svg', 'Download SVG', qrCode, 'image/svg+xml');
-            addDownloadButton('gif', 'Download GIF', qrCode, 'image/gif');
+                // Add download buttons
+                addDownloadButton('png', 'Download PNG', qrCode, 'image/png');
+                addDownloadButton('svg', 'Download SVG', qrCode, 'image/svg+xml');
+                addDownloadButton('gif', 'Download GIF', qrCode, 'image/gif');
+
+                // Update the flag and disable the "Generate QR Code" button
+                isGenerated = true;
+                document.getElementById('generateButton').disabled = true;
+            }
         }
 
         function addDownloadButton(format, label, qrCode, mimeType) {
@@ -176,4 +178,5 @@
         }
     </script>
 </body>
+
 </html>
